k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: job-portal
  labels:
    app: jobportal
    service: backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jobportal
    service: backend
  type: ClusterIP
