k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: job-portal
  labels:
    app: jobportal
    service: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: jobportal
    service: frontend
  type: ClusterIP
