k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: jobportal
    service: db
spec:
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  selector:
    app: jobportal
    service: db
  type: ClusterIP
